--- a/style.css
+++ b/style.css
@@ -6,26 +6,33 @@
 /*-------------------Navigation---------------*/
 header{
 margin: 50px;
-    background-color: blue;
-display: inline-block;
+    background-color: rgb(255, 255, 255);
+display: flex
     
 }
 
 
-
-.navigation{
-    display: flex;
-    margin: 22px;
-    margin-left: 55px;
-    position: absolute;
-   
-   
-}
 #logo{
 
-    border-color: white;
-text-decoration: none;
-border-style: hidden;
+
 
 
 }
+
+.immagine{
+    object-fit: cover
+}
+
+.middlebar{
+display: flex;
+
+text-justify: auto;
+border-width: 3px;
+text-align: center;
+outline: 1px solid;
+border: 0;
+outline-offset: -1px;
+border-style: hidden;
+}
+
+
