--- a/style.css
+++ b/style.css
@@ -15,24 +15,27 @@ display: flex
 #logo{
 
 
-
-
 }
 
+
 .immagine{
-    object-fit: cover
+    object-fit: cover;
+    position:relative;
 }
 
 .middlebar{
+padding: 20 14 2;
 display: flex;
+justify-content: space-between 24px;
 
-text-justify: auto;
-border-width: 3px;
-text-align: center;
-outline: 1px solid;
-border: 0;
-outline-offset: -1px;
-border-style: hidden;
 }
+select{
+background-color: red;
+margin-left: 50px;
 
-
+outline: none;
+list-style: none;
+border: hidden;
+display: inline;
+align-items: baseline;
+}
